sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:7: error: not found: value PlusPetitQue
      if (!PlusPetitQue(i-j,valeur)) {
           ^AlgInsertionSort:7: error: not found: value valeur
      if (!PlusPetitQue(i-j,valeur)) {
                            ^