sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var len = getNombreValeurs()
  for (i <- 1 to len-1) {
    var v = getValeur(i)
    for (j <- 1 to i) {
      if (!PlusPetitQue(i-j,valeur)) {
        copie(i-j,i-j+1)
      }
    }

}
  }